[gd_scene load_steps=3 format=3 uid="uid://bqn4i5clal65t"]

[ext_resource type="Script" path="res://main_menu/assets/spinning_jeralds/spinning_jerald.gd" id="1_bpex4"]
[ext_resource type="Texture2D" uid="uid://7c3tdmgth2he" path="res://main_menu/assets/spinning_jeralds/Jerald_spinning.png" id="2_wxnv0"]

[node name="spinning_jerald" type="Node2D"]
script = ExtResource("1_bpex4")

[node name="JeraldSpinning" type="Sprite2D" parent="."]
position = Vector2(-107, 332)
scale = Vector2(10, 10)
texture = ExtResource("2_wxnv0")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="JeraldSpinning"]

[connection signal="screen_entered" from="JeraldSpinning/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="JeraldSpinning/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
